--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
     <title>NuCamp: A Better Way To Camp</title>
 </head>
 
-
-
-
 <body>
 
     <!-- JUMBOTRON -->
@@ -232,71 +229,77 @@
                             </div>
                             <div class="row form-group">
                                 <label for="siteType" class="col-form-label col-sm-6">Campsite Type</label>
-                                <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
-                                    <button type="button" name="siteType" id="siteTent" class="btn btn-success">Tent</button>
-                                    <button type="button" name="siteType" id="siteRV" class="btn btn-primary">RV</button>
+                                <!-- <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+                                    <button type="button" name="siteType" id="siteTent" class="btn btn-success" value="tent">Tent</button>
+                                    <button type="button" name="siteType" id="siteRV" class="btn btn-primary" value="rv">RV</button>
+                                </div> -->
+
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="options" id="siteTent" autocomplete="off" value="tent">Tent
+                                    </label>
+                                    <label class="btn btn-primary">
+                                        <input type="radio" name="options" id="siteRV" autocomplete="off" value="rv">RV
+                                    </label>
                                 </div>
                             </div>
+
                             <div class="row form-group">
                                 <div class="col">
                                     <button class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                     <button class="btn btn-primary" type="submit">Search</button>
                                 </div>
                             </div>
-                    </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- Modal for login -->
-    <div class="modal fade" id="loginModal" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 class="modal-title">Login</h3>
-                    <button class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <form>
-                            <div class="form-row">
-                                <div class="form-group col-12">
-                                    <label for="loginEmail" class="sr-only">Email address</label>
-                                    <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
-                                </div>
-                                <div class="form-group col-12">
-                                    <label for="loginEPassword" class="sr-only">Password</label>
-                                    <input type="password" class="form-control form-control-sm" id="loginEmail" placeholder="Password">
-                                </div>
-                                <div class="col">
-                                    <div class="form-check">
-                                        <input type="checkbox" id="remember" class="form-check-input">
-                                        <label for="remember" class="form-check-label">Remember me</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
-                                <button class="btn btn-primary btn-sm ml-1">Sign in</button>
-                            </div>
+                            <!-- </div> -->
                         </form>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+
+        <!-- Modal for login -->
+        <div class="modal fade" id="loginModal" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title">Login</h3>
+                        <button class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container-fluid">
+                            <form>
+                                <div class="form-row">
+                                    <div class="form-group col-12">
+                                        <label for="loginEmail" class="sr-only">Email address</label>
+                                        <input type="email" class="form-control form-control-sm" id="loginEmail" placeholder="Enter email">
+                                    </div>
+                                    <div class="form-group col-12">
+                                        <label for="loginEPassword" class="sr-only">Password</label>
+                                        <input type="password" class="form-control form-control-sm" id="loginEmail" placeholder="Password">
+                                    </div>
+                                    <div class="col">
+                                        <div class="form-check">
+                                            <input type="checkbox" id="remember" class="form-check-input">
+                                            <label for="remember" class="form-check-label">Remember me</label>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                                    <button class="btn btn-primary btn-sm ml-1">Sign in</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
-    <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-
-
+        <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
